# canary

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  SHOW_HN.md  alerts.py  canary.example.yaml  dashboard.py  drift.db  prompts.json  pyproject.toml  report.py  requirements.txt  runner.py  seed_demo.py
.github/workflows/: ci.yml  daily-run.yml  weekly-report.yml
tests/: test_scoring.py
