[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "canary-llm"
version = "0.1.0"
description = "Know when your LLM provider silently degrades. Automated quality testing for AI models."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "ApextheBoss"}]
keywords = ["llm", "testing", "drift", "monitoring", "ai", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

dependencies = []

[project.optional-dependencies]
dashboard = ["fastapi>=0.100", "uvicorn>=0.20"]

[project.urls]
Homepage = "https://github.com/ApextheBoss/canary"
Issues = "https://github.com/ApextheBoss/canary/issues"

[project.scripts]
canary = "runner:main"
